[gd_scene load_steps=4 format=3 uid="uid://b4pqx5o3skq5b"]

[ext_resource type="Script" uid="uid://dhtcenwa5xfxn" path="res://Scene/Pipes/Pipes.gd" id="1_7o7f1"]
[ext_resource type="PackedScene" uid="uid://bfe2n53dd3jea" path="res://Scene/Laser/Laser.tscn" id="1_88lix"]
[ext_resource type="PackedScene" uid="uid://cpiwdh4dj46ve" path="res://Scene/Pipe/Pipe.tscn" id="2_7o7f1"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_7o7f1")

[node name="Laser" parent="." instance=ExtResource("1_88lix")]

[node name="Lower" parent="." instance=ExtResource("2_7o7f1")]
position = Vector2(0, 80)

[node name="Upper" parent="." instance=ExtResource("2_7o7f1")]
position = Vector2(0, -80)
rotation = 3.14159

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(132, -1)

[connection signal="body_entered" from="Laser" to="." method="_on_laser_body_entered"]
[connection signal="body_entered" from="Lower" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Upper" to="." method="_on_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
